Afegir color a assigned issues
