# app/controllers/api/users_controller.rb
@@ -13,7 +13,16 @@ class Api::UsersController < Api::ApplicationController
 
   def assigned_issues
     @user = User.find(params[:id])
-    render json: @user.assigned_issues.open_assigned.as_json(only:[:id, :subject, :status_id]), status: :ok
+    render json: @user.assigned_issues.open_assigned.as_json(
+    only: [:id, :subject, :updated_at],
+    include: {
+      status:     { only: [:id, :name, :color] },
+      issue_type: { only: [:id, :name, :color] },
+      severity:   { only: [:id, :name, :color] },
+      priority:   { only: [:id, :name, :color] }
+    }
+  ), status: :ok
+
   rescue ActiveRecord::RecordNotFound
     render json: { error: 'Usuari no trobat' }, status: :not_found
   end
@@ -23,7 +32,13 @@ class Api::UsersController < Api::ApplicationController
     
     # Validació: Només el propi usuari pot veure les seves watched issues
     if current_user == @user
-      render json: @user.watched_issues.as_json(only: [:id, :subject, :status_id]), status: :ok
+      only: [:id, :subject, :updated_at],
+      include: {
+        status:     { only: [:id, :name, :color] },
+        issue_type: { only: [:id, :name, :color] },
+        severity:   { only: [:id, :name, :color] },
+        priority:   { only: [:id, :name, :color] }
+      }
     else
       render json: { error: 'No tens permís per veure les issues observades d\'aquest usuari' }, status: :forbidden
     end
